<resources>
    <string name="app_name">ChatTz</string>
    <string name="name_singin">Войти</string>
    <string name="put_your_name">Введите свое имя</string>
    <string name="put_your_password">введите пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="sing_up">Регистрация</string>
    <string name="put_your_number">введите номер</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="chat">Чаты</string>
    <string name="contact">Контакты</string>
    <string name="option">Настройки</string>
    <string name="name_content">Имя</string>
    <string name="phone_content">Телефон</string>
    <string name="name_sms">Написать сообщение</string>
</resources>