<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/name_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_singin"
        android:textSize="25sp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="25dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_put"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/put_your_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/select_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_put"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/put_your_password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/select_password"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>