<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/name_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_up"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_put"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/put_your_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/select_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_put"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/put_your_number">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/select_number"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_put"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/put_your_password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/select_password"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sing_up"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"
        android:layout_marginTop="20dp"
        />
</LinearLayout>